Fix import and missing function arguments

--- a/LSTM 2.ipynb
+++ b/LSTM 2.ipynb
@@ -50,35 +50,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "5acd82cb-8449-4937-ac7a-8a3bb2db0874",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "import utils_heart"
+    "from utils_heart import *"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "0ecb1ff7-be64-46bb-a7c2-a488e5b248d6",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "user_ids = get_user_ids(df)\n",
-    "print(user_ids)\n",
-    "\n",
-    "df_user = get_data_for_user(user_ids[0])\n",
-    "print(df_user)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "1b14c38f-a32d-4a3d-a712-431c289710c0",
    "metadata": {
     "tags": []
@@ -86,17 +70,26 @@
    "outputs": [],
    "source": [
     "file_path = 'Dataset/2022_04_22_hour_heartbeat_merged.csv'\n",
-    "load_dataset(file_path)"
+    "df = load_dataset(file_path)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "66dd060f-29df-4f82-b95a-3ff489273e6b",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2022484408 4388161847 4558609924 5553957443 5577150313 6117666160\n",
+      " 6962181067 7007744171 8877689391]\n"
+     ]
+    }
+   ],
    "source": [
     "user_ids = get_user_ids(df)\n",
     "print(user_ids)"
@@ -104,30 +97,179 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "c16d1e52-c7c7-4029-b00c-7d49fc5b0973",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "User: 2022484408 has 732 data entries\n",
+      "User: 4388161847 has 708 data entries\n",
+      "User: 4558609924 has 732 data entries\n",
+      "User: 5553957443 has 732 data entries\n",
+      "User: 5577150313 has 708 data entries\n",
+      "User: 6117666160 has 588 data entries\n",
+      "User: 6962181067 has 732 data entries\n",
+      "User: 7007744171 has 588 data entries\n",
+      "User: 8877689391 has 732 data entries\n"
+     ]
+    }
+   ],
    "source": [
     "for user in user_ids:\n",
-    "    print(f\"User: {user} has {len(get_data_for_user(user))} data entries\")"
+    "    print(f\"User: {user} has {len(get_data_for_user(user, df))} data entries\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "ac450998-3da7-4e28-9b92-0282a82cf614",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              time  Beats          Id  Intensity   Steps\n",
+      "0    2016-04-12 01     83  2022484408        0.0     0.0\n",
+      "1    2016-04-12 02     78  2022484408        0.0     0.0\n",
+      "2    2016-04-12 03     66  2022484408        0.0     0.0\n",
+      "3    2016-04-12 04     68  2022484408        0.0     0.0\n",
+      "4    2016-04-12 05     68  2022484408        0.0     0.0\n",
+      "..             ...    ...         ...        ...     ...\n",
+      "727  2016-05-12 08     69  2022484408       14.0   418.0\n",
+      "728  2016-05-12 09     89  2022484408       34.0   812.0\n",
+      "729  2016-05-12 10     92  2022484408       83.0  2689.0\n",
+      "730  2016-05-12 11     71  2022484408       21.0   378.0\n",
+      "731  2016-05-12 12     72  2022484408       21.0   507.0\n",
+      "\n",
+      "[732 rows x 5 columns]\n",
+      "               time  Beats          Id  Intensity  Steps\n",
+      "732   2016-04-13 01     57  4388161847        0.0    0.0\n",
+      "733   2016-04-13 02     57  4388161847        0.0    0.0\n",
+      "734   2016-04-13 03     55  4388161847        0.0    0.0\n",
+      "735   2016-04-13 04     64  4388161847        0.0    0.0\n",
+      "736   2016-04-13 05     75  4388161847        0.0    0.0\n",
+      "...             ...    ...         ...        ...    ...\n",
+      "1435  2016-05-12 08     57  4388161847        7.0  120.0\n",
+      "1436  2016-05-12 09     54  4388161847       11.0  186.0\n",
+      "1437  2016-05-12 10     54  4388161847        7.0  182.0\n",
+      "1438  2016-05-12 11     59  4388161847        9.0  398.0\n",
+      "1439  2016-05-12 12     62  4388161847       22.0  799.0\n",
+      "\n",
+      "[708 rows x 5 columns]\n",
+      "               time  Beats          Id  Intensity  Steps\n",
+      "1440  2016-04-12 01     73  4558609924        0.0    0.0\n",
+      "1441  2016-04-12 02     83  4558609924        0.0    0.0\n",
+      "1442  2016-04-12 03     91  4558609924        0.0    0.0\n",
+      "1443  2016-04-12 04     79  4558609924        0.0    0.0\n",
+      "1444  2016-04-12 05     82  4558609924        0.0    0.0\n",
+      "...             ...    ...         ...        ...    ...\n",
+      "2167  2016-05-12 08     73  4558609924       17.0  246.0\n",
+      "2168  2016-05-12 09     87  4558609924       35.0  700.0\n",
+      "2169  2016-05-12 10     77  4558609924       32.0  826.0\n",
+      "2170  2016-05-12 11     77  4558609924       22.0  440.0\n",
+      "2171  2016-05-12 12     78  4558609924       23.0  698.0\n",
+      "\n",
+      "[732 rows x 5 columns]\n",
+      "               time  Beats          Id  Intensity  Steps\n",
+      "2172  2016-04-12 01     61  5553957443        0.0    0.0\n",
+      "2173  2016-04-12 02     60  5553957443        0.0    0.0\n",
+      "2174  2016-04-12 03     59  5553957443        0.0    0.0\n",
+      "2175  2016-04-12 04     64  5553957443        0.0    0.0\n",
+      "2176  2016-04-12 05     66  5553957443        0.0    0.0\n",
+      "...             ...    ...         ...        ...    ...\n",
+      "2899  2016-05-12 08     78  5553957443        0.0    0.0\n",
+      "2900  2016-05-12 09     78  5553957443        0.0    0.0\n",
+      "2901  2016-05-12 10     78  5553957443        NaN    NaN\n",
+      "2902  2016-05-12 11     78  5553957443        NaN    NaN\n",
+      "2903  2016-05-12 12     56  5553957443        NaN    NaN\n",
+      "\n",
+      "[732 rows x 5 columns]\n",
+      "               time  Beats          Id  Intensity   Steps\n",
+      "2904  2016-04-12 01     58  5577150313        0.0     0.0\n",
+      "2905  2016-04-12 02     58  5577150313        0.0     0.0\n",
+      "2906  2016-04-12 03     57  5577150313        0.0     0.0\n",
+      "2907  2016-04-12 04     64  5577150313        0.0     0.0\n",
+      "2908  2016-04-12 05     58  5577150313        3.0    31.0\n",
+      "...             ...    ...         ...        ...     ...\n",
+      "3607  2016-05-11 08     66  5577150313        8.0   248.0\n",
+      "3608  2016-05-11 09     68  5577150313       14.0   255.0\n",
+      "3609  2016-05-11 10     62  5577150313        9.0   304.0\n",
+      "3610  2016-05-11 11     84  5577150313       42.0  1276.0\n",
+      "3611  2016-05-11 12     56  5577150313        NaN     NaN\n",
+      "\n",
+      "[708 rows x 5 columns]\n",
+      "               time  Beats          Id  Intensity  Steps\n",
+      "3612  2016-04-15 01     93  6117666160        0.0    0.0\n",
+      "3613  2016-04-15 02     99  6117666160        0.0    0.0\n",
+      "3614  2016-04-15 03     99  6117666160        0.0    0.0\n",
+      "3615  2016-04-15 04    101  6117666160        0.0    0.0\n",
+      "3616  2016-04-15 05    103  6117666160        0.0    0.0\n",
+      "...             ...    ...         ...        ...    ...\n",
+      "4195  2016-05-09 08     82  6117666160       24.0  615.0\n",
+      "4196  2016-05-09 09     89  6117666160       37.0  729.0\n",
+      "4197  2016-05-09 10     86  6117666160       37.0  860.0\n",
+      "4198  2016-05-09 11     87  6117666160       35.0  657.0\n",
+      "4199  2016-05-09 12     83  6117666160        NaN    NaN\n",
+      "\n",
+      "[588 rows x 5 columns]\n",
+      "               time  Beats          Id  Intensity   Steps\n",
+      "4200  2016-04-12 01     73  6962181067        0.0     0.0\n",
+      "4201  2016-04-12 02     72  6962181067        0.0     0.0\n",
+      "4202  2016-04-12 03     71  6962181067        0.0     0.0\n",
+      "4203  2016-04-12 04     70  6962181067        0.0     0.0\n",
+      "4204  2016-04-12 05     75  6962181067        0.0     0.0\n",
+      "...             ...    ...         ...        ...     ...\n",
+      "4927  2016-05-12 08     82  6962181067       32.0   644.0\n",
+      "4928  2016-05-12 09     86  6962181067       29.0   585.0\n",
+      "4929  2016-05-12 10     90  6962181067       34.0  1599.0\n",
+      "4930  2016-05-12 11     89  6962181067       24.0   700.0\n",
+      "4931  2016-05-12 12     67  6962181067        NaN     NaN\n",
+      "\n",
+      "[732 rows x 5 columns]\n",
+      "               time  Beats          Id  Intensity  Steps\n",
+      "4932  2016-04-12 01     89  7007744171        0.0    0.0\n",
+      "4933  2016-04-12 02     86  7007744171        0.0    0.0\n",
+      "4934  2016-04-12 03     94  7007744171        0.0    0.0\n",
+      "4935  2016-04-12 04    100  7007744171        0.0    0.0\n",
+      "4936  2016-04-12 05     92  7007744171        0.0    0.0\n",
+      "...             ...    ...         ...        ...    ...\n",
+      "5515  2016-05-06 08     86  7007744171       34.0  907.0\n",
+      "5516  2016-05-06 09     92  7007744171       30.0  806.0\n",
+      "5517  2016-05-06 10     76  7007744171        5.0   90.0\n",
+      "5518  2016-05-06 11     81  7007744171       18.0  441.0\n",
+      "5519  2016-05-06 12     81  7007744171       14.0  301.0\n",
+      "\n",
+      "[588 rows x 5 columns]\n",
+      "               time  Beats          Id  Intensity   Steps\n",
+      "5520  2016-04-12 01     70  8877689391        0.0     0.0\n",
+      "5521  2016-04-12 02     64  8877689391        0.0     0.0\n",
+      "5522  2016-04-12 03     76  8877689391        0.0     0.0\n",
+      "5523  2016-04-12 04     75  8877689391        0.0     0.0\n",
+      "5524  2016-04-12 05     76  8877689391        0.0     0.0\n",
+      "...             ...    ...         ...        ...     ...\n",
+      "6247  2016-05-12 08     64  8877689391       16.0   765.0\n",
+      "6248  2016-05-12 09     62  8877689391        4.0   164.0\n",
+      "6249  2016-05-12 10     67  8877689391       12.0   514.0\n",
+      "6250  2016-05-12 11     70  8877689391       29.0  1407.0\n",
+      "6251  2016-05-12 12     86  8877689391       93.0  3135.0\n",
+      "\n",
+      "[732 rows x 5 columns]\n"
+     ]
+    }
+   ],
    "source": [
     "data_by_users = {}\n",
     "\n",
     "for user in user_ids:\n",
-    "    user_data = get_data_for_user(user)\n",
+    "    user_data = get_data_for_user(user, df)\n",
     "    data_by_users[user] = user_data\n",
     "    \n",
     "for user in user_ids:\n",
@@ -136,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 6,
    "id": "5dd256d3-a12e-4aa6-8940-0f63330a1456",
    "metadata": {
     "tags": []
@@ -240,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 7,
    "id": "ea86a343-376c-4dfa-b62d-67351a2721c4",
    "metadata": {
     "tags": []
