little format changes

--- a/e3/data_preprocessing-visualization.ipynb
+++ b/e3/data_preprocessing-visualization.ipynb
@@ -538,7 +538,6 @@
     "    # Adjust layout to prevent overlap\n",
     "    plt.tight_layout()\n",
     "\n",
-    "    # Show the combined plot\n",
     "    plt.show()\n",
     "\n",
     "# Plot the combined average week data for the first patient\n",
@@ -586,7 +585,6 @@
     "        print(f\"No data available for patient {patient_id}.\")\n",
     "        return\n",
     "\n",
-    "    # Creating a figure with three subplots\n",
     "    fig, (ax1, ax2, ax3) = plt.subplots(3, 1, figsize=(15, 18))\n",
     "\n",
     "    # Plotting bars for average intensity, steps, and beats for each hour\n",
@@ -608,10 +606,8 @@
     "    ax3.set_ylabel('Beats per Minute')\n",
     "    ax3.legend()\n",
     "\n",
-    "    # Adjust layout to prevent overlap\n",
     "    plt.tight_layout()\n",
     "\n",
-    "    # Show the plot\n",
     "    plt.show()\n",
     "\n",
     "# Plot the average hourly data for the first patient\n",
@@ -828,7 +824,6 @@
     "\n",
     "data_points_per_patient, missing_time_points_per_patient\n",
     "\n",
-    "# Let's make the output more readable by summarizing the missing data information for each patient\n",
     "\n",
     "# This function will summarize missing time points for a patient\n",
     "def summarize_missing_time_points(missing_times):\n",
@@ -842,11 +837,10 @@
     "                           for day in missing_days}\n",
     "        return missing_summary\n",
     "\n",
-    "# Apply the summarize function to each patient's missing time points\n",
+    "# get all missing points\n",
     "readable_missing_summary = {patient: summarize_missing_time_points(missing_times) \n",
     "                            for patient, missing_times in missing_time_points_per_patient.items()}\n",
     "\n",
-    "# Now, let's print the data points per patient and the readable summary of missing time points in a more formatted way\n",
     "for patient_id, summary in readable_missing_summary.items():\n",
     "    print(f\"Patient {patient_id}:\")\n",
     "    print(f\"Total Data Points: {data_points_per_patient[patient_id]}\")\n",
@@ -862,7 +856,7 @@
     "    else:\n",
     "        for day, count in summary.items():\n",
     "            print(f\"  {day}: {count} missing hours\")\n",
-    "    print(\"\\n\")  # Add a newline for better separation\n"
+    "    print(\"\\n\")\n"
    ]
   },
   {
@@ -1003,7 +997,7 @@
     "    else:\n",
     "        for day, count in summary.items():\n",
     "            print(f\"  {day}: {count} missing hours\")\n",
-    "    print(\"\\n\")  # Add a newline for better separation\n"
+    "    print(\"\\n\")\n"
    ]
   },
   {
